<resources>
    <string name="app_name">Client Android</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="http">http://</string>
    <string name="download">Download</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="download_button">Download Page</string>
    <string name="enter_text">EnterUrl</string>
    <string name="button_login">Login</string>
    <string name="not_enter_login">You are not enter login</string>
    <string name="not_enter_password">You are not enter password</string>
    <string name="login_not_found">Login Not Found</string>
    <string name="wrong_password">You entered a wrong password</string>
    <string name="login_not_xml">Login Not Found In XML File</string>
    <string name="code_not_xml">UserCode Not Found In XML File</string>
    <string name="password_not_xml">UserPassword Not Found In XML File</string>
    <string name="connect_server_button">Connect Server</string>
    <string name="out_button">Out</string>
    <string name="back">Back</string>
    <string name="skan">Scan</string>
    <string name="selling">Selling</string>
    <string name="admissions">Admission</string>
    <string name="barcode_text">Barcode</string>
    <string name="barcode_enter">Enter Barcode</string>
    <string name="find_by_barcode">Find by barcode</string>
    <string name="warhouses_text">Warhouses</string>
    <string name="name_title">Name</string>
    <string name="articul_title">Articul</string>
    <string name="quantity_title">Quantity</string>
    <string name="product_code_title">Product Code</string>
    <string name="barcode_not_found">Barcode not found</string>
    <string name="product_not_found">Product not found</string>
    <string name="please_scan">Please push scan button</string>
    <string name="barcode_title">Barcode</string>
    <string name="warhouses_not_found">Warhouses not found</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="query">Query</string>
    <string name="name_product">Name</string>
    <string name="numberDoc">AmountDoc</string>
    <string name="number">Amount</string>
    <string name="marked">Marked</string>
    <string name="scan_amount">ScanAmount</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="admission_product_not_found">This product was not found in delivery.</string>
    <string name="barcode_2d">2D Barcode</string>
    <string name="product_is_marked">The product is already marked</string>
    <string name="get_users">Get users</string>
    <string name="get_products">Get Products</string>
    <string name="get_warehouses">Get Warehouses</string>
    <string name="get_barcodes">Get Barcodes</string>
    <string name="get_2d_barcodes">Get 2D Barcodes</string>
    <string name="get_balances">Get Balances</string>
    <string name="get_admission">Get Admission</string>
    <string name="get_sell">Get Sell</string>
    <string name="admission_no">AdmissionNo</string>
    <string name="warehouse_id">Warehouse code</string>
    <string name="get_all">Get All</string>
    <string name="sell_id">Sell Id</string>
    <string name="ok">OK</string>
    <string name="dialog_message">Are you sure you want to exit the application</string>
    <string name="dialog_title">Out</string>
    <string name ="file_name">File Name</string>
    <string name="selected">Selected</string>
    <string name="product_not_found_from_warehouse">Product not found from warehouse</string>
    <string name="send_all_documents">Send All Documents</string>
</resources>
