<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/connect_server_button" />

        <Button
            android:id="@+id/buttonScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skan" />

        <Button
            android:id="@+id/buttonSelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selling" />

        <Button
            android:id="@+id/buttonAdmission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admissions" />

        <Button
            android:id="@+id/buttonWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Web" />

        <Button
            android:id="@+id/buttonOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/out_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>