<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".OpenSellingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="314dp"
        android:layout_height="21dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout122">

        <TextView
            android:id="@+id/tvSellingsNameH"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_product" />

        <TextView
            android:id="@+id/tvSellingsArticulH"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/articul_title" />

        <TextView
            android:id="@+id/tvSellingsNumberDocH"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberDoc" />

        <TextView
            android:id="@+id/tvSellingsNumberH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number" />

        <TextView
            android:id="@+id/tvSellingsMarked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/marked" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <Button
            android:id="@+id/buttonSellingsSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonSellingsScan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/skan" />

        <Button
            android:id="@+id/buttonOpenSellingsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout122"
            android:layout_width="395dp"
            android:layout_height="21dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/textOpenSellingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/openSellingsRecyclerView"
        android:layout_width="376dp"
        android:layout_height="205dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="415dp"
        android:layout_height="101dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openSellingsRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>