<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenAdmissionsActivity">

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="299dp"
        android:layout_height="35dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="29dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvNameH"
                        android:layout_width="138dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name_product" />

                    <TextView
                        android:id="@+id/tvArticulH"
                        android:layout_width="52dp"
                        android:layout_height="wrap_content"
                        android:text="@string/articul_title" />

                    <TextView
                        android:id="@+id/tvNumberDocH"
                        android:layout_width="41dp"
                        android:layout_height="wrap_content"
                        android:text="@string/numberDoc" />

                    <TextView
                        android:id="@+id/tvNumberH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number" />

                    <TextView
                        android:id="@+id/tvMarked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marked" />
                </LinearLayout>
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="331dp"
        android:layout_height="87dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openAdmissionsRecyclerView" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/buttonAdmissionSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonAdmissionScan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/skan" />

        <Button
            android:id="@+id/buttonOpenAddmissionBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textOpenAdmissionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/openAdmissionsRecyclerView"
        android:layout_width="325dp"
        android:layout_height="196dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />

</androidx.constraintlayout.widget.ConstraintLayout>